--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "A Hugo website"
+title = "Hi Sunny"
 theme = "hugo-lithium-theme"
 googleAnalytics = ""
 disqusShortname = ""
